@caospierre repair css link

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -101,10 +101,10 @@
           <div class="col-lg-6 ml-auto"  data-aos="fade-up" data-aos-delay="100">
 
             <div class="owl-carousel slide-one-item-alt">
-              <img src="../assets/images/img_3.jpg" alt="Image" class="img-fluid">
-              <img src="../assets/images/img_4.jpg" alt="Image" class="img-fluid">
-              <img src="../assets/images/img_3.jpg" alt="Image" class="img-fluid">
-              <img src="../assets/images/img_4.jpg" alt="Image" class="img-fluid">
+              <img src="./assets/images/img_3.jpg" alt="Image" class="img-fluid">
+              <img src="./assets/images/img_4.jpg" alt="Image" class="img-fluid">
+              <img src="./assets/images/img_3.jpg" alt="Image" class="img-fluid">
+              <img src="./assets/images/img_4.jpg" alt="Image" class="img-fluid">
             </div>
 
             <div class="owl-custom-direction">
@@ -141,7 +141,7 @@
                 <p>Somos el vinculo de tus necesidades con la tecnologia.</p>
 
               </div>
-              <img src="../assets/images/img_4.jpg" alt="Image" class="img-fluid">
+              <img src="./assets/images/img_4.jpg" alt="Image" class="img-fluid">
             </div>
           </div>
         </div>
@@ -215,7 +215,7 @@
               <h3>Munay Academia</h3>
               <span class="category">Website</span>
             </div>
-            <img src="../assets/images/img_1.jpg" alt="Image" class="img-fluid">
+            <img src="./assets/images/img_1.jpg" alt="Image" class="img-fluid">
           </a>
 
           <a class="work-thumb" href="https://villaflower.net/contact.html" >
@@ -223,7 +223,7 @@
               <h3>Pizzeria VillaFlower</h3>
               <span class="category">Plataforma</span>
             </div>
-            <img src="../assets/images/img_2.jpg" alt="Image" class="img-fluid">
+            <img src="./assets/images/img_2.jpg" alt="Image" class="img-fluid">
           </a>
 
           <a class="work-thumb" href="https://github.com/Caospierre/workapp" >
@@ -231,7 +231,7 @@
               <h3>Face Detection</h3>
               <span class="category">Aplicacion</span>
             </div>
-            <img src="../assets/images/img_8.jpg" alt="Image" class="img-fluid">
+            <img src="./assets/images/img_8.jpg" alt="Image" class="img-fluid">
           </a>
 
           <a class="work-thumb" href="https://github.com/Caospierre/huertoApp" >
@@ -239,15 +239,15 @@
               <h3>Mi Cosecha</h3>
               <span class="category">Aplicacion Flutter</span>
             </div>
-            <img src="../assets/images/img_7.jpg" alt="Image" class="img-fluid">
+            <img src="./assets/images/img_7.jpg" alt="Image" class="img-fluid">
           </a>
 
-          <a class="work-thumb" href="../assets/images/img_4.jpg" data-fancybox="gallery">
+          <a class="work-thumb" href="./assets/images/img_4.jpg" data-fancybox="gallery">
             <div class="work-text">
               <h3>Kichwa++</h3>
               <span class="category">Entorno de Programacion</span>
             </div>
-            <img src="../assets/images/img_6.jpg" alt="Image" class="img-fluid">
+            <img src="./assets/images/img_6.jpg" alt="Image" class="img-fluid">
           </a>
       </div>
 
@@ -341,10 +341,10 @@
           <div class="col-lg-6 ml-auto"  data-aos="fade-up" data-aos-delay="200">
 
             <div class="owl-carousel slide-one-item-alt">
-              <img src="../assets/images/person_1.jpg" alt="Image" class="img-fluid">
-              <img src="../assets/images/person_2.jpg" alt="Image" class="img-fluid">
-              <img src="../assets/images/person_3.jpg" alt="Image" class="img-fluid">
-              <img src="../assets/images/person_4.jpg" alt="Image" class="img-fluid">
+              <img src="./assets/images/person_1.jpg" alt="Image" class="img-fluid">
+              <img src="./assets/images/person_2.jpg" alt="Image" class="img-fluid">
+              <img src="./assets/images/person_3.jpg" alt="Image" class="img-fluid">
+              <img src="./assets/images/person_4.jpg" alt="Image" class="img-fluid">
             </div>
 
             <div class="owl-custom-direction">
@@ -516,7 +516,7 @@
           <span class="play-button">
             <span class="icon-play"></span>
           </span>
-          <img src="../assets/images/video_bg.jpg" alt="Image" class="img-fluid">
+          <img src="./assets/images/video_bg.jpg" alt="Image" class="img-fluid">
         </a>
       </div>
     </div>
@@ -526,7 +526,7 @@
 
         <div class="row align-items-center">
           <div class="col-md-5 order-1 order-md-2 mb-5 mb-md-0">
-            <img src="../assets/images/about_1.jpg" alt="Image" class="img-fluid">
+            <img src="./assets/images/about_1.jpg" alt="Image" class="img-fluid">
           </div>
           <div class="col-md-6 mr-auto order-2 order-md-1">
 
